Bug 324192 - crash if double click on state diagrams choice element
Summary: crash if double click on state diagrams choice element
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.11.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Andi Fischer
URL:
Keywords:
: 325267 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-28 23:24 UTC by Dainis
Modified: 2013-11-12 21:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dainis 2013-08-28 23:24:29 UTC
Application: Umbrello UML Modeller (umbrello), signal: Segmentation fault
Using host libthread_db library "/usr/lib/libthread_db.so.1".
[KCrash Handler]
#6  0xb5b03c41 in __memcpy_ia32 () from /usr/lib/libc.so.6
#7  0xb68fe036 in QString::realloc(int) () from /usr/lib/libQtCore.so.4
#8  0xb68ff3a4 in QString::realloc() () from /usr/lib/libQtCore.so.4
#9  0xb63279db in QLineControl::updateDisplayText(bool) () from /usr/lib/libQtGui.so.4
#10 0xb6327e07 in QLineControl::init(QString const&) () from /usr/lib/libQtGui.so.4
#11 0xb6320694 in ?? () from /usr/lib/libQtGui.so.4
#12 0xb63222b0 in QLineEdit::QLineEdit(QString const&, QWidget*) () from /usr/lib/libQtGui.so.4
#13 0xb70e623d in KLineEdit::KLineEdit(QString const&, QWidget*) () from /usr/lib/libkdeui.so.5
#14 0x080bd21a in ?? ()
#15 0x080c9b52 in ?? ()
#16 0x080ca380 in ?? ()
#17 0x080ca4b7 in ?? ()
#18 0x082f123d in ?? ()
#19 0x082f8280 in ?? ()
#20 0x08374a95 in ?? ()
#21 0x083745d5 in ?? ()
#22 0x083d9b14 in ?? ()
#23 0xb653f33f in QGraphicsScene::event(QEvent*) () from /usr/lib/libQtGui.so.4
#24 0xb5eb99a4 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#25 0xb5ec03b3 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#26 0xb701f6a4 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#27 0xb69be45a in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#28 0xb5eb809d in ?? () from /usr/lib/libQtGui.so.4
#29 0xb65587f2 in QGraphicsView::mouseDoubleClickEvent(QMouseEvent*) () from /usr/lib/libQtGui.so.4
#30 0xb5f1351b in QWidget::event(QEvent*) () from /usr/lib/libQtGui.so.4
#31 0xb631447c in QFrame::event(QEvent*) () from /usr/lib/libQtGui.so.4
#32 0xb63a2b88 in QAbstractScrollArea::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#33 0xb6559ad7 in QGraphicsView::viewportEvent(QEvent*) () from /usr/lib/libQtGui.so.4
#34 0xb63a2e06 in ?? () from /usr/lib/libQtGui.so.4
#35 0xb69be5ce in QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#36 0xb5eb9981 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#37 0xb5ec1f88 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/libQtGui.so.4
#38 0xb701f6a4 in KApplication::notify(QObject*, QEvent*) () from /usr/lib/libkdeui.so.5
#39 0xb69be45a in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib/libQtCore.so.4
#40 0xb5ebfc33 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib/libQtGui.so.4
#41 0xb5f40448 in ?? () from /usr/lib/libQtGui.so.4
#42 0xb5f3eb41 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib/libQtGui.so.4
#43 0xb5f69364 in ?? () from /usr/lib/libQtGui.so.4
#44 0xb52bf0de in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#45 0xb52bf488 in ?? () from /usr/lib/libglib-2.0.so.0
#46 0xb52bf548 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#47 0xb69ed98f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#48 0xb5f6941e in ?? () from /usr/lib/libQtGui.so.4
#49 0xb69bcec3 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#50 0xb69bd1e9 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/libQtCore.so.4
#51 0xb69c298e in QCoreApplication::exec() () from /usr/lib/libQtCore.so.4
#52 0xb5eb7e44 in QApplication::exec() () from /usr/lib/libQtGui.so.4
#53 0x080773b5 in ?? ()
#54 0xb5aa09d3 in __libc_start_main () from /usr/lib/libc.so.6
#55 0x08078fe9 in _start ()


Reproducible: Always

Steps to Reproduce:
1. Open modeler 
2. create new state diagram
3. place choice
4. change cursor to select
5. double click on choice
Actual Results:  
crash

Expected Results:  
Enter mabe properties or some text
Comment 1 Andi Fischer 2013-08-29 22:16:17 UTC
Git commit ef83cbc62b9065567fb0e639791b6aad1cf3d07b by Andi Fischer.
Committed on 29/08/2013 at 22:12.
Pushed by fischer into branch 'master'.

Double click on a state other than initial, normal or end crashed the application.
Fixed by using a string instead of an array.

M  +35   -5    umbrello/dialogs/statedialog.cpp

http://commits.kde.org/umbrello/ef83cbc62b9065567fb0e639791b6aad1cf3d07b
Comment 2 Andi Fischer 2013-08-29 22:16:17 UTC
Git commit ef83cbc62b9065567fb0e639791b6aad1cf3d07b by Andi Fischer.
Committed on 29/08/2013 at 22:12.
Pushed by fischer into branch 'master'.

Double click on a state other than initial, normal or end crashed the application.
Fixed by using a string instead of an array.

M  +35   -5    umbrello/dialogs/statedialog.cpp

http://commits.kde.org/umbrello/ef83cbc62b9065567fb0e639791b6aad1cf3d07b
Comment 3 Ralf Habacker 2013-10-06 11:51:43 UTC
Git commit 5dd307faff3e50d14656960e54cfd7b0994ba686 by Ralf Habacker, on behalf of Andi Fischer.
Committed on 29/08/2013 at 22:12.
Pushed by habacker into branch 'KDE/4.11'.

Double click on a state other than initial, normal or end crashed the application.
Fixed by using a string instead of an array.
FIXED-IN:4.11.3

Conflicts:
	umbrello/dialogs/statedialog.cpp

M  +37   -7    umbrello/dialogs/statedialog.cpp

http://commits.kde.org/umbrello/5dd307faff3e50d14656960e54cfd7b0994ba686
Comment 4 Ralf Habacker 2013-10-06 11:51:43 UTC
Git commit 5dd307faff3e50d14656960e54cfd7b0994ba686 by Ralf Habacker, on behalf of Andi Fischer.
Committed on 29/08/2013 at 22:12.
Pushed by habacker into branch 'KDE/4.11'.

Double click on a state other than initial, normal or end crashed the application.
Fixed by using a string instead of an array.
FIXED-IN:4.11.3

Conflicts:
	umbrello/dialogs/statedialog.cpp

M  +37   -7    umbrello/dialogs/statedialog.cpp

http://commits.kde.org/umbrello/5dd307faff3e50d14656960e54cfd7b0994ba686
Comment 5 Andi Fischer 2013-10-11 18:00:04 UTC
*** Bug 325267 has been marked as a duplicate of this bug. ***