Double click on a state other than initial, normal or end crashed the application. Fixed by using a string instead of an array.

BUG: 324192
CCBUG: 324192
FIXED-IN:4.11.3

Conflicts:
	umbrello/dialogs/statedialog.cpp